# invent

./: Dockerfile  README.md  pyproject.toml
main/: db.sqlite3  mock_data.py
main/inventory_management/: admin.py  forms.py  models.py  urls.py  views.py
main/inventory_management/migrations/: 0001_initial.py  0002_warehouse_remove_order_product_remove_order_quantity_and_more.py  0003_remove_product_quantity.py
main/inventory_management/templates/inventory_management/: base.html  login.html  main.html  order.html  order_create.html  orders.html  product.html  product_create.html  products.html  register.html  warehouse.html  warehouse_create.html  warehouses.html
main/main/: settings.py  urls.py
